Fix menores  a TurnoTest, Turno, AnualdorTurno, PuntajeTest, FabricaOpciones, Algohoot*